--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -14,7 +14,7 @@ body {
   background-color: #fff;
   color: #222;
   font-size: 20px;
-  font-family: "Gill Sans", sans-serif;
+  font-family: "Gill Sans", Calibri, sans-serif;
   font-weight: 200;
 }
 
@@ -343,7 +343,7 @@ hr {
 
 pre,
 code {
-  font-family: Menlo, Monaco, monospace;
+  font-family: Menlo, Monaco, Consolas, monospace;
   font-size: 15px;
 }
 
