--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -37,6 +37,15 @@ header h1 {
   color: #333;
 }
 
+figure {
+  padding: 20px;
+  text-align: center;
+}
+
+figure img {
+  max-width: 100%;
+}
+
 nav ul {
   margin: 0;
 }
@@ -71,6 +80,7 @@ nav ul li a {
 
 .meta {
   font-size: 14px;
+  margin-bottom: 10px;
 }
 
 footer {
@@ -250,6 +260,7 @@ h5,
 h6 {
   color: #333;
   font-weight: 400;
+  margin-bottom: 5px;
 }
 
 h1 {
@@ -262,31 +273,26 @@ h1 {
 h2 {
   font-size: 24px;
   line-height: 20px;
-  margin-bottom: 10px;
 }
 
 h3 {
   font-size: 20px;
   line-height: 20px;
-  margin-bottom: 10px;
 }
 
 h4 {
   font-size: 16px;
   line-height: 20px;
-  margin-bottom: 10px;
 }
 
 h5 {
   font-size: 14px;
   line-height: 20px;
-  margin-bottom: 20px;
 }
 
 h6 {
   font-size: 12px;
   line-height: 20px;
-  margin-bottom: 20px;
 }
 
 p {
@@ -374,7 +380,6 @@ blockquote {
   background-color: #f8f8f8;
   color: #666;
   border-left: 5px solid #ddd;
-  font: 14px/20px Georgia, Times, serif;
   quotes: "\201C" "\201D";
 }
 
