Some cleanup.  Add mobile theme support.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,10 +5,11 @@
   <title>{{ .Title }}</title>
   <link href="/css/theme.css" rel="stylesheet" type="text/css" />
   <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+  <meta name="viewport" content="initial-scale=1.0, width=device-width" />
 </head>
 <body class="container">
 <header>
-  <img src="/img/logo.svg" height=100 alt="mod" class="float-left" />
+  <a href="/"><img src="/img/logo.svg" height=100 alt="mod" class="float-left" /></a>
   <h1>Andrew.</h1>
   <div class="float-right">
     <a href="https://twitter.com/wavded">
@@ -23,7 +24,6 @@
   </div>
   <nav>
     <ul>
-      <li><a href="/">Home</a></li>
       <li><a href="">Books</a></li>
       <li><a href="">Projects</a></li>
     </ul>
