Fix link style creap on social icons.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,15 +12,9 @@
   <a href="/"><img src="/img/logo.svg" height=100 alt="mod" class="float-left" /></a>
   <h1>Andrew.</h1>
   <div class="float-right">
-    <a href="https://twitter.com/wavded">
-      <img src="/img/twitter.svg" height=20 />
-    </a>
-    <a href="https://github.com/wavded">
-      <img src="/img/github.svg" height=20 />
-    </a>
-    <a href="https://www.linkedin.com/in/wavded">
-      <img src="/img/linkedin.svg" height=20 />
-    </a>
+    <a href="https://twitter.com/wavded"><img src="/img/twitter.svg" height=20 /></a>
+    <a href="https://github.com/wavded"><img src="/img/github.svg" height=20 /></a>
+    <a href="https://www.linkedin.com/in/wavded"><img src="/img/linkedin.svg" height=20 /></a>
   </div>
   <nav>
     <ul>
