--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,9 @@
     <h2>Posts:</h2>
     <ul>
     {{ range .Data.Pages }}
+    {{ if not .Draft }}
     <li><small>{{ .Lastmod.Format "01/02/2006"}}:</small> <a href={{ .Permalink }}>{{ .Title }}</a></li>
+    {{ end }}
     {{ end }}
     </ul>
   </div>
