Add books and drafts pages.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,8 +18,8 @@
   </div>
   <nav>
     <ul>
-      <li><a href="">Books</a></li>
-      <li><a href="">Projects</a></li>
+      <li><a href="/books">Books</a></li>
+      <li><a href="https://github.com/wavded">Projects</a></li>
     </ul>
   </nav>
   <hr/>
