--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -378,8 +378,14 @@ hr {
 
 pre,
 code {
-  font-family: Menlo, Monaco, Consolas, monospace;
+  font-family: "Source Code Pro", Menlo, Monaco, Consolas, monospace;
   font-size: 15px;
+  font-weight: 400;
+}
+
+pre b,
+pre strong {
+  font-weight: 500;
 }
 
 pre {
@@ -389,7 +395,6 @@ pre {
 
 code {
   padding: 2px 5px;
-  display: inline-block;
   background-color: #f0f3f3;
 }
 
@@ -427,6 +432,13 @@ blockquote:after {
 }
 
 /* List */
+ol,
+li {
+  margin-left: 0;
+  padding-left: 20px;
+  text-indent: -20px;
+}
+
 ul {
   margin-bottom: 20px;
   list-style-position: inside;
@@ -440,6 +452,10 @@ ol {
 ul ul,
 ol ol {
   margin-bottom: 0;
+}
+
+li {
+  margin-bottom: 10px;
 }
 
 /* Form */
