--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,9 +15,12 @@
     <a href="https://twitter.com/wavded"><img src="/img/twitter.svg" height=20 /></a>
     <a href="https://github.com/wavded"><img src="/img/github.svg" height=20 /></a>
     <a href="https://www.linkedin.com/in/wavded"><img src="/img/linkedin.svg" height=20 /></a>
+    <a href="mailto:andrew@wavded.com"><img src="/img/email.png" style="opacity:0.8" height=20 /></a>
   </div>
   <nav>
     <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/post">Posts</a></li>
       <li><a href="/books">Books</a></li>
       <li><a href="https://github.com/wavded">Projects</a></li>
     </ul>
