--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,29 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>{{ .Title }}</title>
-  <link href="/css/theme.css" rel="stylesheet" type="text/css" />
-  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-  <meta name="viewport" content="initial-scale=1.0, width=device-width" />
-</head>
-<body class="container">
-<header>
-  <a href="/"><img src="/img/logo.svg" height=100 alt="mod" class="float-left" /></a>
-  <h1>Andrew.</h1>
-  <div class="float-right">
-    <a href="https://twitter.com/wavded"><img src="/img/twitter.svg" height=20 /></a>
-    <a href="https://github.com/wavded"><img src="/img/github.svg" height=20 /></a>
-    <a href="https://www.linkedin.com/in/wavded"><img src="/img/linkedin.svg" height=20 /></a>
-    <a href="mailto:andrew@wavded.com"><img src="/img/email.png" style="opacity:0.8" height=20 /></a>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/post">Posts</a></li>
-      <li><a href="/books">Books</a></li>
-      <li><a href="https://github.com/wavded">Projects</a></li>
-    </ul>
-  </nav>
-  <hr/>
-</header>
+  <head>
+    <meta charset="utf-8" />
+    <title>{{ .Title }}</title>
+    <link href="/css/theme.css" rel="stylesheet" type="text/css" />
+    <link
+      href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}"
+      rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}"
+    />
+    <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+  </head>
+  <body class="container">
+    <header>
+      <a href="/"
+        ><img src="/img/logo.svg" height="100" alt="mod" class="float-left"
+      /></a>
+      <h1>Andrew.</h1>
+      <div class="float-right">
+        <a href="https://twitter.com/wavded"
+          ><img src="/img/twitter.svg" height="20"
+        /></a>
+        <a href="https://github.com/wavded"
+          ><img src="/img/github.svg" height="20"
+        /></a>
+        <a href="https://www.linkedin.com/in/wavded"
+          ><img src="/img/linkedin.svg" height="20"
+        /></a>
+        <a href="mailto:andrew@wavded.com"
+          ><img src="/img/email.png" style="opacity:0.8" height="20"
+        /></a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/post">Posts</a></li>
+          <li><a href="/books">Books</a></li>
+          <li><a href="https://github.com/wavded">Projects</a></li>
+        </ul>
+      </nav>
+      <hr />
+    </header>
+  </body>
+</html>
