--- a/layouts/partials/shortbio.html
+++ b/layouts/partials/shortbio.html
@@ -4,7 +4,7 @@
       <img src="/img/profile.jpg" width=100>
     </td>
     <td>
-      Marc is the co-author of <a href="https://www.manning.com/books/node-js-in-action-second-edition">Node.js in Action</a> and <a href="https://www.manning.com/books/node-js-in-practice">Node.js in Practice</a>. He writes here and for <a href="https://strongloop.com">@strongloop</a>. Works as a full-stack engineer for <a href="http://applieddataconsultants.com">@applieddataconsultants</a>.
+      Marc is the co-author of <a href="https://www.manning.com/books/node-js-in-action-second-edition">Node.js in Action</a> and <a href="https://www.manning.com/books/node-js-in-practice">Node.js in Practice</a>. He enjoys learning and writes technical stuff here and for <a href="https://ibm.com">IBM</a>. Currently plays around with Go, TypeScript and Rust. Works as a full-stack engineer for <a href="http://applieddataconsultants.com">@applieddataconsultants</a>.
     </td>
   </tr>
 </table>
