--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -14,7 +14,7 @@ body {
   background-color: #fff;
   color: #222;
   font-size: 20px;
-  font-family: "Gill Sans", Calibri, sans-serif;
+  font-family: 'Gill Sans', Calibri, sans-serif;
   font-weight: 200;
 }
 
@@ -150,7 +150,7 @@ hr.finale {
 }
 
 hr.finale::after {
-  content: "𝄂";
+  content: '𝄂';
   display: inline-block;
   position: relative;
   top: -0.7em;
@@ -200,7 +200,7 @@ hr.finale::after {
 
 .row:after,
 .clearfix:after {
-  content: ".";
+  content: '.';
   display: block;
   height: 0;
   clear: both;
@@ -279,7 +279,7 @@ h5,
 h6 {
   color: #333;
   font-weight: 400;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 h1.post-title {
@@ -378,7 +378,7 @@ hr {
 
 pre,
 code {
-  font-family: "Source Code Pro", Menlo, Monaco, Consolas, monospace;
+  font-family: 'Source Code Pro', Menlo, Monaco, Consolas, monospace;
   font-size: 15px;
   font-weight: 400;
 }
@@ -394,18 +394,17 @@ pre {
 }
 
 code {
-  padding: 2px 5px;
   background-color: #f0f3f3;
 }
 
 pre {
   font-size: 15px;
   margin-bottom: 20px;
-  white-space: pre-wrap;       /* css-3 */
-  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-  white-space: -pre-wrap;      /* Opera 4-6 */
-  white-space: -o-pre-wrap;    /* Opera 7 */
-  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+  white-space: pre-wrap; /* css-3 */
+  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
 blockquote {
@@ -414,7 +413,7 @@ blockquote {
   background-color: #f8f8f8;
   color: #666;
   border-left: 5px solid #ddd;
-  quotes: "\201C" "\201D";
+  quotes: '\201C''\201D';
 }
 
 blockquote p {
@@ -458,7 +457,6 @@ article li {
 article li {
   margin-bottom: 10px;
 }
-
 
 /* Form */
 fieldset {
