--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,10 +5,8 @@
   <div>
     <h2>Latest posts:</h2>
     <ul>
-    {{ range .Data.Pages }}
-    {{ if and (not .Draft) (eq .Type "post") }}
+    {{ range sort (where (where .Site.RegularPages "Type" "post") "Draft" false) "Lastmod" "desc" }}
     <li><small>{{ .Lastmod.Format "01/02/2006"}}:</small> <a href={{ .Permalink }}>{{ .Title }}</a></li>
-    {{ end }}
     {{ end }}
     </ul>
   </div>
